fix YT video embedding

--- a/_includes/video.liquid
+++ b/_includes/video.liquid
@@ -61,6 +61,7 @@
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen
+      referrerpolicy="strict-origin-when-cross-origin"
       {% if include.width %}
         width="{{ include.width }}"
       {% else %}
