fix closing tag

--- a/_layouts/reports.liquid
+++ b/_layouts/reports.liquid
@@ -39,7 +39,7 @@ layout: page
             <strong>Date:</strong> {{ data.date }}
           </div>
           {% if data.blog_url %}
-            <div><strong>More info: </strong><a href="{{ data.blog_url }}">blog post</div>
+            <div><strong>More info: </strong><a href="{{ data.blog_url }}">blog post</a></div>
           {% endif %}
           
           {% comment %} {% if profile.content %}
